force-app/main/default/objects/Vehicle_Dealer__c/Vehicle_Dealer__c.object-meta.xml
<CustomObject>
    <description>Stores authorized dealer info</description>
    <label>Dealer</label>
    <nameField>
        <label>Dealer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Dealers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>