force-app/main/default/objects/Vehicle_Dealer__c/fields/Dealer_Location__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Location__c</fullName>
    <description>Location of the dealer.</description>
    <label>Dealer Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>