force-app/main/default/objects/Vehicle_Dealer__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>Dealer uses email to make deals.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>