force-app/main/default/objects/Vehicle_Dealer__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>phone is used to make deals.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>